--- a/atcoder/abc132.ipynb
+++ b/atcoder/abc132.ipynb
@@ -55,21 +55,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n",
-      "9 6 3 2 5 8 7 4 1\n",
-      "5\n"
+      "1 2 3 4 5\n",
+      "1 2 3\n",
+      "[['1', '2', '3', '4', '5'], ['1', '2', '3']]\n",
+      "0\n"
      ]
     }
    ],
    "source": [
     "a = [input().split() for i in range(2)]\n",
+    "print(a)\n",
     "li = a[-1]\n",
     "lis = [int(i) for i in li]\n",
     "n = int(a[0][0])\n",
